// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltip className api can be overridden 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows bottom 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows left 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows right 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip direction api allows top 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip has defaults 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip has defaults 2`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
  <span
    class="tooltip top"
    id="my-component-tooltip"
    style="left: 0px; top: -128px;"
  >
    Help Text
  </span>
</body>
`;

exports[`tooltip truncate api adds the class if true 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;

exports[`tooltip truncate api does not add the class if false 1`] = `
<body>
  <div>
    <div
      class="wrapper"
    >
      <div
        aria-describedby="my-component-tooltip"
        id="my-component"
      >
        Child
      </div>
    </div>
  </div>
</body>
`;
